--- a/css/contentpages.css
+++ b/css/contentpages.css
@@ -26,3 +26,22 @@ li{
 .chapters{
   margin-top: 10px;
 }
+
+
+.iframe-container{
+  text-align: center;
+}
+.question{
+  margin-bottom: 100px;
+  background-color:#391B54;
+  color: white;
+  padding-bottom: 20px;
+  border-radius: 10px;
+}
+.question h3{
+  padding: 20px;
+}
+.sol-img
+{
+  margin-top: 40px;
+}
