--- a/css/styles.css
+++ b/css/styles.css
@@ -246,6 +246,19 @@ letter-spacing: 1px;}
   .py-3 {
     text-align: center;
   }
+  .iframe-container{
+    position: relative;
+    width: auto;
+    padding-bottom: 56.25%; 
+    height: 0;
+  }
+  .iframe-container iframe{
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
 }
 
 @media only screen and (max-width: 800px) {
@@ -299,6 +312,19 @@ letter-spacing: 1px;}
   }
   .sick-btn {
     font-size: 1rem !important;
+  }
+  .iframe-container{
+    position: relative;
+    width: auto;
+    padding-bottom: 56.25%; 
+    height: 0;
+  }
+  .iframe-container iframe{
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
   }
 }
 
